# sitral

./: .gitignore  CMakeLists.txt  README.md
cmake/: sitralConfig.cmake.in  sitralProto.cmake
examples/basic/: CMakeLists.txt  publisher.cpp  registry.cpp  subscriber.cpp
examples/basic/proto/: Test.proto
include/: BroadcastServer.h  ClientSocket.h  Publisher.h  PublisherInfo.hpp  Registry.h  ServerSocket.h  Subscriber.hpp
include/sitral/: BroadcastServer.h  ClientSocket.h  Publisher.hpp  PublisherInfo.hpp  Registry.h  ServerSocket.h  Subscriber.hpp
proto/: CMakeLists.txt  RegistryRequest.proto  example.proto
src/: BroadcastServer.cpp  ClientSocket.cpp  Publisher.cpp  Registry.cpp  ServerSocket.cpp  registry_main.cpp
